Assignments and case studies added

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 module_2_git/Module-2_version_control-_System.pdf
 module_2_git/Module_01_-Devops_Foundation.pdf
+module_3_docker/Module-4_Docker_1.pdf
